# opengl_study

./: .gitignore  README.md
.devcontainer/: devcontainer.json
example01/: CMakeLists.txt  README.md
example01/src/: main.cpp
example02/: CMakeLists.txt  README.md
example02/shader/: shader.vert
example02/src/: glad.c  main.cpp
example03/: CMakeLists.txt  README.md
example03/shader/: shader.glsl
example03/src/: main.cpp  shader.cpp  shader.hpp
example04/: README.md
example04/shader/: shader.glsl
example04/src/: glad.c  main.cpp  shader.cpp  shader.hpp
